--- a/styles/anima.css
+++ b/styles/anima.css
@@ -20,5 +20,11 @@
 }
 
 .cardContent {
-background-color: red;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  color: #fff;
+  pointer-events: none;
+  background-color: red;
 }
